# lsd_slam-1

./: .gitignore  CMakeLists.txt
example/: LSD.cpp
src/: GUI.cpp  GUI.h  LiveSLAMWrapper.cpp  LiveSLAMWrapper.h  SlamSystem.cpp  SlamSystem.h
src/DataStructures/: Frame.cpp  Frame.h  FrameMemory.cpp  FrameMemory.h  FramePoseStruct.cpp  FramePoseStruct.h
src/DepthEstimation/: DepthMap.cpp  DepthMap.h  DepthMapPixelHypothesis.cpp  DepthMapPixelHypothesis.h
src/GlobalMapping/: FabMap.cpp  FabMap.h  KeyFrameGraph.cpp  KeyFrameGraph.h  TrackableKeyFrameSearch.cpp  TrackableKeyFrameSearch.h  g2oTypeSim3Sophus.cpp  g2oTypeSim3Sophus.h
src/IOWrapper/: ImageDisplay.h  InputImageStream.h  NotifyBuffer.h  Output3DWrapper.h  Timestamp.cpp  Timestamp.h  TimestampedObject.h
src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp
src/IOWrapper/Pangolin/: Keyframe.h  PangolinOutput3DWrapper.cpp  PangolinOutput3DWrapper.h
src/Tracking/: LGSX.h  Relocalizer.cpp  Relocalizer.h  SE3Tracker.cpp  SE3Tracker.h  Sim3Tracker.cpp  Sim3Tracker.h  TrackingReference.cpp  TrackingReference.h
src/util/: EigenCoreInclude.h  IndexThreadReduce.h  Intrinsics.h  Parse.h  RawLogReader.cpp  RawLogReader.h  Resolution.h  SophusUtil.h  Stopwatch.h  ThreadMutexObject.h  Undistorter.cpp  Undistorter.h  globalFuncs.cpp  globalFuncs.h  settings.cpp  settings.h
